--- a/vistas/css/otrosEstilos.css
+++ b/vistas/css/otrosEstilos.css
@@ -35,8 +35,15 @@
 
 .hStyle{
 
-    margin: 50px;
+    text-align: center;
 
+}
+
+.imgDetallePaqueteStyle{
+    width: 400px;
+    display:block;
+    margin:auto;
+    margin-top: 20px;
 }
 
 
@@ -50,3 +57,21 @@
 .linkStyle{
     margin: 120px;
 }
+
+.boton_personalizado{
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0;
+    display:block;
+    margin:auto;
+  }
+
+  .boton_personalizado:hover{
+    color: #1883ba;
+    background-color: #ffffff;
+  }
