carga de las imagenes de los destinos del paquete

--- a/vistas/css/otrosEstilos.css
+++ b/vistas/css/otrosEstilos.css
@@ -2,13 +2,11 @@
     background-color:white;
     width: 500px;
     height: 500px;
-
     position: absolute;
 	top:0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-  	
 	margin: auto;
 }
 
@@ -17,15 +15,14 @@
     background-color:white;
     width: 490px;
     height: 490px;
-
     position: absolute;
 	top:0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-  	
 	margin: auto;
 }
+
 
 .pStyle{
 
@@ -101,3 +98,21 @@
     color: #1883ba;
     background-color: #ffffff;
   }
+
+  /* Detalle Paquete */
+
+  .imageGallery{
+    background-color:white;
+    width: 500px;
+    height: 500px;
+    position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
+  }
+
+  .detallesPackageStyle{
+    text-align: center;
+}
