--- a/vistas/css/otrosEstilos.css
+++ b/vistas/css/otrosEstilos.css
@@ -105,14 +105,27 @@
     background-color:white;
     width: 500px;
     height: 500px;
-    position: absolute;
+    position: relative;
 	top:0;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	margin: auto;
+    margin: auto;
+    margin-top: 50px;
   }
 
-  .detallesPackageStyle{
+.detallesPackageStyle{
     text-align: center;
+}
+
+.textDestinyNameDatallePaquete{
+    text-align: center;
+    color: lavenderblush;
+}
+
+.divDestinyName{
+    background-color:rgb(0, 0, 0);
+    width: 450px;
+    height: 25px;
+    position: relative;
 }
