--- a/vistas/css/otrosEstilos.css
+++ b/vistas/css/otrosEstilos.css
@@ -2,7 +2,7 @@
     background-color:white;
     width: 500px;
     height: 500px;
-    position: absolute;
+    position: relative;
 	top:0;
 	bottom: 0;
 	left: 0;
